# cennik-stali

./: .dockerignore  .env.example  .gitignore  .syno_docker  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 395e1c1eb9d0_add_price_change_audit.py  dec47bb3f2e8_initial_schema.py  e559e6c16697_add_material_groups.py
deploy/: INSTALL.md
deploy/cennik/: Dockerfile  docker-compose.yml  requirements.txt
deploy/cennik/scripts/: migrate_to_postgres.py
deploy/cennik/src/: config.py  main.py
docker/: Dockerfile
docs/plans/: 2026-01-03-ctl-multiblanking-design.md
scripts/: create_admin.py  export_sqlite.py  import_base_prices.py  import_film_matrix.py  import_grinding_matrix.py  import_postgres.py  package_deploy.sh  seed_materials.py
src/: __init__.py  config.py  database.py  main.py
src/auth/: __init__.py  dependencies.py  session.py
src/models/: __init__.py  machine.py  material.py  price.py  user.py
src/routers/: __init__.py  admin.py  auth.py  prices.py
src/schemas/: __init__.py  admin.py  pricing.py
src/services/: __init__.py  auth.py  bulk_pricing.py  excel_import.py  export_service.py  grinding_validation.py  pricing.py
src/templates/: base.html  base_admin.html  base_app.html  calculator.html  index.html  price_table.html
src/templates/admin/: export.html  film_matrix.html  grinding_matrix.html  history.html  import.html  index.html  machine_matrix.html  materials.html  pricing.html  users.html
src/templates/auth/: change_password.html
tests/: __init__.py
(+27 files in other folders)
